--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -5,6 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
+        "start:prod": "npx prisma db push --accept-data-loss && npx prisma generate && npm run prisma:seed && node src/index.js",
         "dev": "nodemon src/index.js",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate dev",
