--- a/backend-node/Dockerfile
+++ b/backend-node/Dockerfile
@@ -2,6 +2,9 @@ FROM node:18-slim
 
 WORKDIR /app
 
+# Install OpenSSL (required by Prisma)
+RUN apt-get update -y && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+
 # Copy package files
 COPY package*.json ./
 
